<resources>
    <string name="app_name">TeresaPassword</string>
    <string name="action_settings">Settings</string>
    <string name="title_page_settings">Settings</string>
    <string name="title_page_list" translatable="false">TeresaPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_pattern_lock">PatternLockActivity</string>

    <string name="str_generate_password">Generate Password</string>
    <string name="str_edit_hint">Input a website name</string>
    <string name="tab_name_settings">Settings</string>
    <string name="tab_name_generate_password">Password</string>
    <string name="pref_about">About</string>
    <string name="pref_category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="menu_add">Add</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_update">Update</string>
    <string name="toast_pwd_clipboard">Password is generated, and copy to clipboard</string>
    <string name="radio_letter">Only contain letters</string>
    <string name="radio_number">Only contain numbers</string>
    <string name="radio_letter_number">Contain both letter and number</string>
    <string name="radio_letter_number_symbol">Contain letter number and symbol</string>
    <string name="hint_input_name">Please input a name. e.g. google.com</string>
    <string name="hint_input_key">Please input your key</string>



</resources>